--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/Daeun_Jung2.png?raw=true" # your photo (or logo) here
 # email: "daeunj@umd.edu"
 
 description: |
-  I am Daeun (Dah-Unn) Jung, a Ph.D. student in the Department of Computer Science at the University of Maryland, College Park, working with Tianyi Zhou.
+  I am Daeun (Dah-Unn) Jung, a Ph.D. student in the Department of Computer Science at the University of Maryland, College Park, working with Ang Li.
   Prior to UMD, I received my B.S. and M.S. degrees in Electrical Engineering from Ewha Womans University.
 
   <br><br>
