--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Daeun Jung" # your name (or website title) here
+title: Daeun Jung # your name (or website title) here
 logo: "/images/Daeun_Jung2.png?raw=true" # your photo (or logo) here
 # email: "daeunj@umd.edu"
 
@@ -13,5 +13,7 @@ description: >
   &nbsp;|&nbsp;
   <a href="https://www.linkedin.com/in/daeun-jung-6b86771a6/">LinkedIn</a>
 
-theme: jekyll-theme-minimal
-google_analytics: "UA-000000-0" # your Google Analytics tracking ID here
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
+google_analytics: UA-000000-0 # your Google Analytics tracking ID here
