Revise description in _config.yml
Updated the description section to include links to CV and email.

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 title: Daeun Jung # your name (or website title) here
 logo: "/images/Daeun_Jung2.png?raw=true" # your photo (or logo) here
-description: >
-  I am Daeun (Dah-Unn) Jung, a Ph.D. student in the Department of Computer Science at the University of Maryland, College Park, working with Ang Li.
-  Prior to UMD, I received my B.S. and M.S. degrees in Electrical Engineering from Ewha Womans University.
-
+description:
   <br><br>
   <a href="https://drive.google.com/file/d/1oBfRfJDUmeQmQAKObAdsIsKAWq8wq4Ls/view?usp=sharing">CV</a>
   &nbsp;|&nbsp;
