--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 title: Daeun Jung # your name (or website title) here
+
 logo: "/images/Daeun_Jung2.png?raw=true" # your photo (or logo) here
-description:
+description: >
+  I am Daeun (Dah-Unn) Jung, a Ph.D. student in the Department of Computer Science at the University of Maryland, College Park, working with Ang Li.
+  Prior to UMD, I received my B.S. and M.S. degrees in Electrical Engineering from Ewha Womans University.
   <br><br>
   <a href="https://drive.google.com/file/d/1oBfRfJDUmeQmQAKObAdsIsKAWq8wq4Ls/view?usp=sharing">CV</a>
   &nbsp;|&nbsp;
