--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Daeun Jung # your name (or website title) here
 
-logo: "/images/Daeun_Jung2.png?raw=true" # your photo (or logo) here
+logo: "/images/daeunj_2.png?raw=true" # your photo (or logo) here
 description: >
   I am Daeun (Dah-Unn) Jung, a Ph.D. student in the Department of Computer Science at the University of Maryland, College Park, working with Ang Li.
   Prior to UMD, I received my B.S. and M.S. degrees in Electrical Engineering from Ewha Womans University.
